More checkstyle fixes. Mostly removing tab characters and correcting formatting
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java/das@453343 13f79535-47bb-0310-9956-ffa450edef68