@@ -36,15 +36,17 @@ public class ImpliedRelationshipTests extends DasTest {
         r.setName("definedRelationship");
 
         DAS das = DAS.FACTORY.createDAS(helper.getConfig(), getConnection());
-        Command select = das.createCommand("select * from CUSTOMER left join ANORDER ON CUSTOMER.ID = ANORDER.CUSTOMER_ID");
+        Command select = das.createCommand("select * from CUSTOMER left join ANORDER "
+                + "ON CUSTOMER.ID = ANORDER.CUSTOMER_ID");
 
         DataObject root = select.executeQuery();
         DataObject cust = root.getDataObject("CUSTOMER[1]");
         Iterator i = cust.getType().getProperties().iterator();
         while (i.hasNext()) {
             Property p = (Property) i.next();
-            if (!p.getType().isDataType())
+            if (!p.getType().isDataType()) {
                 assertEquals(p.getName(), "definedRelationship");
+            }
         }
     }
 
@@ -56,7 +58,8 @@ public class ImpliedRelationshipTests extends DasTest {
     public void testAddNewOrder() throws Exception {
         DAS das = DAS.FACTORY.createDAS(getConnection());
 
-        Command select = das.createCommand("SELECT * FROM CUSTOMER LEFT JOIN ANORDER ON CUSTOMER.ID = ANORDER.CUSTOMER_ID");
+        Command select = das.createCommand("SELECT * FROM CUSTOMER LEFT JOIN ANORDER "
+                + "ON CUSTOMER.ID = ANORDER.CUSTOMER_ID");
 
         DataObject root = select.executeQuery();
 
@@ -69,9 +72,9 @@ public class ImpliedRelationshipTests extends DasTest {
         // Create a new Order and add to customer1
         DataObject order = root.createDataObject("ANORDER");
 
-        order.set("ID", new Integer(99));
+        order.set("ID", Integer.valueOf(99));
         order.set("PRODUCT", "The 99th product");
-        order.set("QUANTITY", new Integer(99));
+        order.set("QUANTITY", Integer.valueOf(99));
         cust.getList("ANORDER").add(order);
 
         assertEquals(custOrderCount + 1, cust.getList("ANORDER").size());
@@ -80,9 +83,10 @@ public class ImpliedRelationshipTests extends DasTest {
         das.applyChanges(root);
 
         // verify cust1 relationship updates
-        select = das.createCommand("SELECT * FROM CUSTOMER LEFT JOIN ANORDER ON CUSTOMER.ID = ANORDER.CUSTOMER_ID where CUSTOMER.ID = ?");
+        select = das.createCommand("SELECT * FROM CUSTOMER LEFT JOIN ANORDER ON CUSTOMER.ID = ANORDER.CUSTOMER_ID "
+                 + "where CUSTOMER.ID = ?");
 
-        select.setParameter(1, new Integer(custID));
+        select.setParameter(1, Integer.valueOf(custID));
         root = select.executeQuery();
 
         assertEquals(custOrderCount + 1, root.getList("CUSTOMER[1]/ANORDER").size());
