@@ -26,18 +26,20 @@ import org.apache.tuscany.das.rdb.test.framework.TestDataWithExplicitColumns;
 public class VisitData extends TestDataWithExplicitColumns {
 
     /*
-     * CREATE TABLE VISIT ( ID INTEGER UNSIGNED NOT NULL AUTO_INCREMENT, CHECK_IN TIMESTAMP NULL, CHECK_OUT TIMESTAMP NULL, OCC_COUNT INTEGER UNSIGNED
+     * CREATE TABLE VISIT ( ID INTEGER UNSIGNED NOT NULL AUTO_INCREMENT, 
+     * CHECK_IN TIMESTAMP NULL, CHECK_OUT TIMESTAMP NULL, OCC_COUNT INTEGER UNSIGNED
      * NULL, PRIMARY KEY(ID) );
      */
 
     // id omitted. id is auto-generated.
-    private static int[] columnTypes = { Types.TIMESTAMP, Types.TIMESTAMP, Types.INTEGER };
+    private static int[] columnTypes = {Types.TIMESTAMP, Types.TIMESTAMP, Types.INTEGER};
 
-    private static Object[][] data = { { getTimestamp("2006-10-20 00:00:00.0"), getTimestamp("2006-10-22 00:00:00.0"), new Integer(1) },
-            { getTimestamp("2006-10-20 00:00:00.0"), getTimestamp("2006-10-22 00:00:00.0"), new Integer(1) },
-            { getTimestamp("2006-10-20 00:00:00.0"), getTimestamp("2006-10-22 00:00:00.0"), new Integer(1) } };
+    private static Object[][] data = {
+        {getTimestamp("2006-10-20 00:00:00.0"), getTimestamp("2006-10-22 00:00:00.0"), Integer.valueOf(1)},
+        {getTimestamp("2006-10-20 00:00:00.0"), getTimestamp("2006-10-22 00:00:00.0"), Integer.valueOf(1)},
+        {getTimestamp("2006-10-20 00:00:00.0"), getTimestamp("2006-10-22 00:00:00.0"), Integer.valueOf(1)}};
 
-    private static String[] columns = { "CHECK_IN", "CHECK_OUT", "OCC_COUNT" };
+    private static String[] columns = {"CHECK_IN", "CHECK_OUT", "OCC_COUNT"};
 
     public VisitData(Connection connection) {
         super(connection, data, columns, columnTypes);
